feat:se creò una section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header class="text-center">
         <h1>Api local</h1>
+        <section></section>
     </header>
 
     <main class="container">
